# block-mesh-rs

./: .gitignore  Cargo.toml
examples-crate/: Cargo.toml
examples-crate/render/: main.rs
examples-crate/uv_mapping/: main.rs
examples-crate/uv_mapping_simple/: main.rs
src/: buffer.rs  lib.rs  simple.rs
src/geometry/: face.rs  quad.rs
