[package]
name = "block-mesh"
description = "Fast algorithms for generating voxel block meshes from arrays."
version = "0.2.4"
repository = "https://github.com/bonsairobo/block-mesh-rs"
keywords = ["graphics", "mesh", "voxel"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ilattice = { version = "0.4", git = "https://github.com/bonsairobo/ilattice-rs.git", workspace = "../ilattice" }
ndshape = "0.3"
ndcopy = "0.3"
